fix: fix a bug which make illegible some contents in light theme

--- a/src/main.scss
+++ b/src/main.scss
@@ -79,7 +79,6 @@ button {
     );
     transition: all 0.15s;
   }
-  
 }
 
 body {
@@ -96,15 +95,15 @@ h1 {
   margin-top: 0;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-}
+// @media (prefers-color-scheme: light) {
+//   :root {
+//     color: #213547;
+//     background-color: #ffffff;
+//   }
+//   a:hover {
+//     color: #747bff;
+//   }
+//   button {
+//     background-color: #f9f9f9;
+//   }
+// }
